# PAOO

./: CMakeLists.txt
src/: CMakeLists.txt  main.cpp
src/cargo-holder/: CMakeLists.txt  cargo-holder.hpp
src/copilot/: CMakeLists.txt  copilot.cpp  copilot.hpp
src/crew-member/: CMakeLists.txt  crewMember.cpp  crewMember.hpp
src/flight-log/: CMakeLists.txt  flight-log.cpp  flight-log.hpp
src/military-plane/: CMakeLists.txt  militaryPlane.cpp  militaryPlane.hpp
src/pilot/: CMakeLists.txt  pilot.cpp  pilot.hpp
src/plane/: CMakeLists.txt  plane.cpp  plane.hpp
src/utilities/: CmakeLists.txt  InfoRetriever.cpp  InfoRetriever.hpp
